# os-net-descriptor-passing

./: CMakeLists.txt  Fifo.cpp  Fifo.h  Pipe.cpp  Pipe.h  Socket.cpp  Socket.h  helper.cpp  helper.h  main-client.cpp  main-server.cpp
